--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -1327,6 +1327,11 @@
       "subheading_3": "Գծապատկերը կցուցադրի ձեր գրանցած տրամադրությունները ըստ ամսաթվի և ժամանակի՝ օգնելով տեսանելի դարձնել ձեր էմոցիոնալ միտումները։ Դրա ներքևում դուք կգտնեք առաջարկվող բովանդակություն, որը հարմարեցված է ձեր վերջին տրամադրության գրառմանը՝ աջակցություն և պատկերացում ապահովելու համար։",
       "subheading_4": "Սեղմելով կոնկրետ իրադարձության վրա՝ կարող եք դիտել այդ պահին գրանցված բոլոր մեկնաբանություններն ու նշումները՝ ավելի խորապես հասկանալու համար, թե ինչն է ազդել ձեր տրամադրության վրա։",
       "subheading_5": "Դուք կարող եք ստեղծել հաշվետվություն ցանկացած ընտրված ժամանակահատվածի համար և արտահանել այն CSV ֆայլի ձևաչափով՝ հեշտությամբ վերանայելու կամ կիսվելու ձեր տրամադրության տվյալներով, երբ անհրաժեշտ է։"
+    },
+    "leave-consultation": {
+      "heading": "Վստա՞հ եք, որ ցանկանում եք լքել խորհրդատվությունը?",
+      "confirm": "Լքել",
+      "cancel": "Չեղարկել"
     }
   },
   "routes": {
