--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1431,6 +1431,11 @@
       "subheading_3": "Диаграмма покажет ваши записанные настроения по дате и времени, помогая визуализировать эмоциональные тенденции. Ниже вы найдете рекомендованный контент, подобранный в соответствии с вашим последним настроением — для поддержки и осознания.",
       "subheading_4": "Нажав на конкретное событие, вы можете просмотреть все комментарии и заметки, сделанные в этот момент, чтобы глубже понять, что повлияло на ваше настроение.",
       "subheading_5": "Вы можете создать отчет за любой выбранный период и экспортировать его в формате CSV, чтобы легко просматривать или делиться своими данными о настроении при необходимости."
+    },
+    "leave-consultation": {
+      "heading": "Вы уверены, что хотите покинуть консультацию?",
+      "confirm": "Покинуть",
+      "cancel": "Отмена"
     }
   },
   "routes": {
