--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -1430,6 +1430,11 @@
       "subheading_3": "Диаграммада сіздің жазылған көңіл күйлеріңіз күн мен уақыт бойынша көрсетіледі, бұл эмоционалды үрдістерді көруге мүмкіндік береді. Оның төменгі бөлігінде сіздің соңғы көңіл күй жазбаңызға сәйкес келетін ұсынылған мазмұн көрсетіледі — бұл қолдау мен түсінік береді.",
       "subheading_4": "Белгілі бір оқиғаны басу арқылы сол сәтке жазылған барлық түсініктемелер мен жазбаларды көре аласыз, бұл сіздің көңіл күйіңізге не әсер еткенін тереңірек түсінуге мүмкіндік береді.",
       "subheading_5": "Сіз кез келген таңдалған күн аралығына есеп жасай аласыз және оны CSV файлы ретінде экспорттай аласыз — бұл сіздің көңіл күй деректеріңізді қарап шығуды немесе қажет болған жағдайда бөлісуді жеңілдетеді."
+    },
+    "leave-consultation": {
+      "heading": "Сеанстан шынымен кеткіңіз келе ме?",
+      "confirm": "Шығу",
+      "cancel": "Болдырмау"
     }
   },
   "routes": {
