--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -1481,6 +1481,11 @@
       "subheading_3": "Un grafic va afișa stările tale de spirit înregistrate în funcție de dată și oră, ajutându-te să vizualizezi tendințele emoționale. Mai jos vei găsi conținut recomandat, adaptat celei mai recente înregistrări a stării tale de spirit, pentru sprijin și înțelegere.",
       "subheading_4": "Făcând clic pe un anumit eveniment, poți vedea toate comentariile și notițele înregistrate pentru acel moment, oferindu-ți o înțelegere mai profundă a factorilor care ți-au influențat starea de spirit.",
       "subheading_5": "Poți genera un raport pentru orice interval de date selectat și îl poți exporta ca fișier CSV, ceea ce îți permite să îți revizuiești sau să împarți datele despre stările tale de spirit atunci când este necesar."
+    },
+    "leave-consultation": {
+      "heading": "Sigur vrei să părăsești consultația?",
+      "confirm": "Părăsește",
+      "cancel": "Anulează"
     }
   },
   "routes": {
