--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1447,6 +1447,11 @@
       "subheading_3": "Діаграма показуватиме ваші записані настрої за датою та часом, допомагаючи візуалізувати емоційні тенденції. Нижче ви знайдете рекомендований контент, адаптований до вашого останнього запису настрою — для підтримки та кращого розуміння.",
       "subheading_4": "Натиснувши на конкретну подію, ви можете переглянути всі коментарі та нотатки, зроблені в цей момент, щоб глибше зрозуміти, що вплинуло на ваш настрій.",
       "subheading_5": "Ви можете створити звіт за будь-який обраний період і експортувати його у форматі CSV, щоб легко переглядати або ділитися своїми даними про настрій за потреби."
+    },
+    "leave-consultation": {
+      "heading": "Ви впевнені, що хочете вийти з консультації?",
+      "confirm": "Вийти",
+      "cancel": "Скасувати"
     }
   },
   "routes": {
