Update src/locales/uk.json (POEditor.com)

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -3,11 +3,11 @@
     "page": {
       "page_1": "Головна",
       "page_2": "Консультації",
-      "page_3": "Інформаційний портал",
-      "page_4": "Q&A",
+      "page_3": "Знання",
+      "page_4": "Запитай психолога",
       "footer_1": "Головна",
       "footer_2": "Консультації",
-      "footer_3": "Інформаційний портал",
+      "footer_3": "Знання",
       "footer_4": "Твій профіль",
       "footer_5": "Умови використання",
       "footer_6": "Політика конфіденційності",
@@ -136,7 +136,7 @@
       "nickname_label": "Нікнейм *",
       "nickname_placeholder": "Введіть псевдонім",
       "nickname_error": "Необхідно вказати нікнейм",
-      "paragraph_1": "Твій анонімний код доступу",
+      "paragraph_1": "Твій анонімний токен доступу",
       "password_label": "Пароль *",
       "terms_agreement_text_1": "Погоджуюся, що",
       "terms_agreement_text_2": "Політика конфіденційності",
@@ -145,8 +145,8 @@
       "password_error": "Пароль має містити щонайменше 8 символів, 1 велику літеру, 1 малу літеру і 1 цифру",
       "register_button_label": "Зареєструватися",
       "login_button_label": "Вже маю обліковий запис",
-      "copy_text": "Скопіюй та збережи або занотуй анонімний код. Якщо ти його втратиш, то більше не зможеш отримати доступ до облікового запису.",
-      "copy_success": "Код скопійовано",
+      "copy_text": "Скопіюй і збережи або запиши свій анонімний токен.\nЯкщо ти його загубиш, не зможеш увійти до свого облікового запису та приєднатися до консультації з психологом!\nДля проведення сесії з психологом тобі потрібні токен доступу та пароль до облікового запису.",
+      "copy_success": "токен скопійовано",
       "confirm_password_label": "Підтвердіть пароль",
       "password_match_error": "Поля «Пароль» і «Підтвердити пароль» не збігаються",
       "age_terms_agreement_text_1": "Мені більше 16 років"
@@ -256,8 +256,8 @@
       "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку"
     },
     "login": {
-      "email_label": "Електронна пошта / Код доступу",
-      "email_placeholder": "Введи електронну адресу або код доступу",
+      "email_label": "Електронна пошта / токен доступу",
+      "email_placeholder": "Введи електронну адресу або токен доступу",
       "password_label": "Пароль",
       "password_placeholder": "Введи свій пароль",
       "forgot_password_label": "Я забув/ла пароль",
@@ -277,7 +277,7 @@
       "poland_description": "uSupport — це платформа психічного здоров’я та добробуту, призначена для молодих людей (16–24)"
     },
     "articles": {
-      "heading": "Інформаційний портал",
+      "heading": "Знання",
       "no_results": "Результатів не знайдено",
       "could_not_load_content": "Для обраної країни й мови немає результатів.",
       "all": "Усі",
@@ -302,13 +302,13 @@
       "register_email": "Зареєструйтеся за допомогою електронної пошти",
       "register_anonymously": "Анонімна реєстрація",
       "continue_as_guest": "Продовжити без реєстрації",
-      "heading_1": "Про платформу",
-      "text_1": "Платформа, що поважає Вашу конфіденційність і безпеку. Ваш добробут — наш пріоритет! uSupport надає персоналізовану й делікатну психологічну допомогу.",
-      "heading_2": "Про підтримку",
-      "text_2": "uSupport — це платформа з підтримки ментального здоров’я та консультування молодих людей, їхніх батьків/опікунів, де конфіденційність і безпека є пріоритетом.",
-      "heading_3": "Про тебе",
-      "text_3": "Будь найкращою версією себе! Твоє ментальне здоров'я має значення.",
-      "login": "Увійди за допомогою електронної пошти/коду доступу",
+      "heading_1": "Запис на консультацію",
+      "text_1": "1. Зареєструйся анонімно або за допомогою електронної пошти.\n2. Обери консультанта та зручний для тебе час зустрічі.\n3. У день консультації увійди до свого облікового запису за допомогою електронної пошти або токена доступу та пароля.\n4. Поспілкуйся з психологом.",
+      "heading_2": "Консультації польською та українською мовами",
+      "text_2": "На платформі uSupport ти можеш записатися на консультацію з психологом не лише польською, а й українською мовою!\nПід час вибору консультанта перевір, якими мовами він проводить сесії.",
+      "heading_3": "Не чекай! Запишись на консультацію з психологом",
+      "text_3": "Потребуєш розмови з психологом? Уже сьогодні запишись на індивідуальну консультацію на платформі uSupport. Твоє психічне здоров’я — важливе!",
+      "login": "Увійди за допомогою електронної пошти/токена",
       "pl_text": "uSupport — це платформа психічного здоров’я та добробуту, призначена для молодих людей (16–24)"
     },
     "register-email": {
@@ -338,7 +338,7 @@
       "search": "Пошук"
     },
     "user-details": {
-      "access_token": "Твій анонімний код доступу",
+      "access_token": "Твій анонімний токен доступу",
       "change_photo": "Зміни фото",
       "nickname": "Нікнейм",
       "nickname_placeholder": "Введіть псевдонім",
@@ -423,7 +423,6 @@
       "live_text": "Зараз",
       "accept_button_label": "Погодитись на консультацію",
       "join_button_label": "Приєднатись",
-      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку",
       "change_button_label": "Змінити",
       "ordinal_st": "-ий",
       "ordinal_nd": "-ий",
@@ -442,7 +441,8 @@
       "november": "Листопад",
       "december": "Грудень",
       "require_cookies": "Щоб переглянути це відео, прийміть усі файли cookie.",
-      "cookie_preferences": "Налаштування файлів cookie"
+      "cookie_preferences": "Налаштування файлів cookie",
+      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку"
     },
     "mood-tracker": {
       "happy": "Щасливим/ою",
@@ -452,11 +452,11 @@
       "worried": "Схвильованим/ою",
       "heading": "Як ти почуваєшся сьогодні?",
       "mood_tracker": "Монітор настрою",
-      "how_it_works": "Як це працює",
       "additional_comment_placeholder": "Що є причиною того, що ти себе так почуваєш?",
       "submit_mood_track": "Надішли",
       "add_mood_tracker_success": "Сьогоднішній настрій додано",
       "emergency_label": "Це стосується життєвої події чи критичної ситуації?",
+      "how_it_works": "Як це працює",
       "recommendations": "Рекомендації",
       "recommendations_text": "Хочете переглянути графік настрою та побачити рекомендований контент?",
       "check_out": "Переглянути"
@@ -470,7 +470,6 @@
       "change_button_label": "Зміна",
       "accept_button_label": "Погодься на консультацію",
       "join_button_label": "Приєднайся",
-      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку",
       "schedule_button_label": "Розклад",
       "live_label": "Зараз",
       "no_consultations": "Наразі немає майбутніх консультацій",
@@ -492,7 +491,8 @@
       "november": "Листопад",
       "december": "Грудень",
       "coupon": "Купон",
-      "explore_button_label": "Дослідити"
+      "explore_button_label": "Дослідити",
+      "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку"
     },
     "activity-log-dashboard": {
       "heading": "Журнал активності",
@@ -636,7 +636,7 @@
       "how_it_works": "Подивися, як це працює"
     },
     "my-qa": {
-      "ask_button_label": "Запитай анонімно",
+      "ask_button_label": "Запитай психолога",
       "answer_by": "Відповів/ла:",
       "schedule_consultation": "Заплануй консультацію",
       "today": "Сьогодні",
@@ -858,7 +858,11 @@
       "continue": "Продовжити",
       "view": "Переглянути результати",
       "view_detailed_results": "Переглянути детальні результати",
-      "started_at": "Розпочато {{date}}"
+      "started_at": "Розпочато {{date}}",
+      "psychological": "Psychological",
+      "biological": "Biological",
+      "social": "Social",
+      "latest_results": "Latest Results"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Оцінювання завершено",
@@ -875,34 +879,26 @@
       "inc_inc_inc": "Ми помітили деякі виклики: психологічний, біологічний та соціальний зросли.",
       "inc_inc_same": "Ми помітили деякі виклики: психологічний та біологічний зросли, тоді як соціальний залишився без змін.",
       "inc_inc_dec": "Чудово! Соціальний зменшився, хоча психологічний та біологічний зросли.",
-
       "inc_same_inc": "Ми помітили деякі виклики: психологічний та соціальний зросли, тоді як біологічний залишився без змін.",
       "inc_same_same": "Ми помітили деякі виклики: психологічний зріс, тоді як біологічний та соціальний залишилися без змін.",
       "inc_same_dec": "Чудово! Соціальний зменшився, хоча психологічний зріс, а біологічний залишився без змін.",
-
       "inc_dec_inc": "Чудово! Біологічний зменшився, хоча психологічний та соціальний зросли.",
       "inc_dec_same": "Чудово! Біологічний зменшився, хоча психологічний зріс, а соціальний залишився без змін.",
       "inc_dec_dec": "Великий прогрес! Біологічний та соціальний зменшилися, хоча психологічний зріс.",
-
       "same_inc_inc": "Ми помітили деякі виклики: біологічний та соціальний зросли, тоді як психологічний залишився без змін.",
       "same_inc_same": "Ми помітили деякі виклики: біологічний зріс, тоді як психологічний та соціальний залишилися без змін.",
       "same_inc_dec": "Чудово! Соціальний зменшився, хоча біологічний зріс, а психологічний залишився без змін.",
-
       "same_same_inc": "Ми помітили деякі виклики: соціальний зріс, тоді як психологічний та біологічний залишилися без змін.",
       "same_same_dec": "Чудово! Соціальний зменшився, тоді як психологічний та біологічний залишилися без змін.",
-
       "same_dec_inc": "Чудово! Біологічний зменшився, хоча соціальний зріс, а психологічний залишився без змін.",
       "same_dec_same": "Чудово! Біологічний зменшився, тоді як психологічний та соціальний залишилися без змін.",
       "same_dec_dec": "Великий прогрес! Біологічний та соціальний зменшилися, тоді як психологічний залишився без змін.",
-
       "dec_inc_inc": "Чудово! Психологічний зменшився, хоча біологічний та соціальний зросли.",
       "dec_inc_same": "Чудово! Психологічний зменшився, хоча біологічний зріс, а соціальний залишився без змін.",
       "dec_inc_dec": "Великий прогрес! Психологічний та соціальний зменшилися, хоча біологічний зріс.",
-
       "dec_same_inc": "Чудово! Психологічний зменшився, хоча соціальний зріс, а біологічний залишився без змін.",
       "dec_same_same": "Чудово! Психологічний зменшився, тоді як біологічний та соціальний залишилися без змін.",
       "dec_same_dec": "Великий прогрес! Психологічний та соціальний зменшилися, тоді як біологічний залишився без змін.",
-
       "dec_dec_inc": "Великий прогрес! Психологічний та біологічний зменшилися, хоча соціальний зріс.",
       "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
       "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися."
@@ -1007,7 +1003,7 @@
       "export_failed": "Експорт не вдався. Будь ласка, спробуйте ще раз."
     },
     "information-portal": {
-      "heading": "Інформаційний портал",
+      "heading": "Знання",
       "subheading": "Тут можна знайти все, чого потребуєш для покращення свого психічного здоров'я",
       "heading_newest": "Найновіші статті",
       "heading_popular": "Найпопулярніші",
@@ -1355,10 +1351,10 @@
       "cancel": "Скасуй"
     },
     "save-access-code-confirmation": {
-      "heading": "Підтвердь, що зберіг/егла код доступу",
-      "text": "Переконайся, що зберіг/егла або занотував/ла свій код доступу. В іншому випадку ти втратиш доступ до свого анонімного облікового запису та прогресу в додатку.",
-      "button": "Я зберіг/егла код доступу",
-      "warning": "Я розумію, що не матиму доступу до облікового запису, якщо втрачу цей код",
+      "heading": "Підтвердь, що зберіг/егла токен доступу",
+      "text": "Переконайся, що зберіг/егла або занотував/ла свій токен доступу. В іншому випадку ти втратиш доступ до свого анонімного облікового запису та прогресу в додатку.",
+      "button": "Я зберіг/егла токен доступу",
+      "warning": "Я розумію, що не матиму доступу до облікового запису, якщо втрачу цей токен",
       "click_to_copy": "Натисни для копіювання"
     },
     "payment-information": {
