Fix: continue baseline assesment

--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -321,7 +321,8 @@
       "text_2": "uSupport este o platformă de sănătate mintală, psihosocială și bunăstare concepută pentru tineri și îngrijitorii acestora, unde confidențialitatea și siguranța sunt prioritare.",
       "heading_3": "Despre dvs.",
       "text_3": "Fiți cea mai bună persoană care puteți fi! Sănătatea mintală contează.",
-      "login": "Autentificare cu e-mail/token de acces"
+      "login": "Autentificare cu e-mail/token de acces",
+      "pl_text": "uSupport este o platformă de sănătate mintală și bunăstare destinată tinerilor (16–24)."
     },
     "register-email": {
       "email_error": "Vă rugăm să introduceți o adresă de e-mail validă",
@@ -554,7 +555,9 @@
       "reject": "Respingere",
       "reject_consultation_success": "Consultație respinsă",
       "no_notifications": "Nu aveți încă notificări.",
-      "yesterday": "ieri"
+      "yesterday": "ieri",
+      "consultation_remind_start_24_hours_before": "Consultația dvs. cu furnizorul <0>{{providerName}} începe în 24 de ore</0>",
+      "consultation_remind_start_48_hours_before": "Consultația dvs. cu furnizorul <0>{{providerName}} începe în 48 de ore</0>"
     },
     "safety-feedback-block": {
       "heading": "Acest lucru este important. Vă rugăm să citiți și să completați",
@@ -641,7 +644,7 @@
       "no_recommendations": "Nu s-au găsit recomandări"
     },
     "mascot-header-MyQA": {
-      "heading": "My Q&A",
+      "heading": "Întrebările mele",
       "subheading_its": "Este",
       "subheading_anonymous": "ANONIM",
       "subheading_text1": "Întrebările dvs.",
@@ -773,38 +776,38 @@
       "offered_services_label": "Servicii oferite",
       "providers_label": "Furnizori",
 
-      "violence_victim_helpline": "Violence victims helpline",
-      "individual_psychotherapy": "Individual psychotherapy",
-      "social_information_counseling": "Social information and counseling",
-      "rehab_psycho_neuro_children": "Rehabilitation and recovery services for children with psycho-neuro-motor disorders",
-      "individual_psychological_counseling": "Individual psychological counseling",
-      "personal_development_counseling": "Personal development counseling",
-      "child_helpline": "Child helpline",
-      "speech_therapy": "Speech therapy",
-      "suicide_prevention_helpline": "Suicide prevention helpline",
-      "child_psychiatry": "Child psychiatry",
-      "group_psychological_counseling": "Group psychological counseling",
-      "sport_recreational_activities": "Sports recreational activities (sports, games, dance)",
-      "rehab_autism_children": "Rehabilitation and recovery services for children with autism",
-      "art_recreational_activities": "Artistic recreational activities (theatre, music, poetry, painting, storytelling)",
-      "addiction_helpline": "Addiction helpline",
-      "group_psychotherapy": "Group psychotherapy",
+      "violence_victim_helpline": "Linie de asistență pentru victimele violenței",
+      "individual_psychotherapy": "Psihoterapie individuală",
+      "social_information_counseling": "Informare și consiliere socială",
+      "rehab_psycho_neuro_children": "Servicii de recuperare pentru copii cu tulburări psihoneuro-motorii",
+      "individual_psychological_counseling": "Consiliere psihologică individuală",
+      "personal_development_counseling": "Consiliere pentru dezvoltare personală",
+      "child_helpline": "Telefonul copilului",
+      "speech_therapy": "Logopedie",
+      "suicide_prevention_helpline": "Linie de prevenire a suicidului",
+      "child_psychiatry": "Psihiatrie pediatrică",
+      "group_psychological_counseling": "Consiliere psihologică de grup",
+      "sport_recreational_activities": "Activități recreative sportive (sport, jocuri, dans)",
+      "rehab_autism_children": "Servicii de recuperare pentru copii cu autism",
+      "art_recreational_activities": "Activități recreative artistice (teatru, muzică, poezie, pictură, storytelling)",
+      "addiction_helpline": "Linie de asistență pentru dependențe",
+      "group_psychotherapy": "Psihoterapie de grup",
 
-      "emergency_situations": "Emergency situations",
-      "pediatric_psychiatry": "Pediatric psychiatry",
-      "psychological_evaluation": "Psychological evaluation",
-      "psychological_counseling": "Psychological counseling",
-      "support_groups": "Support groups",
-      "social_assistance_and_counseling": "Social assistance and counseling",
-      "personal_development": "Personal development",
-      "vocational_counseling_and_career_guidance": "Vocational counseling and career guidance",
-      "occupational_therapy_ergotherapy": "Occupational therapy/Ergotherapy",
-      "physiotherapy_physical_recovery": "Physiotherapy/Physical recovery",
-      "autism_spectrum_disorder_therapies": "Autism spectrum disorder therapies",
-      "disability_assessment": "Disability assessment",
-      "pediatric_neurology": "Pediatric neurology",
-      "special_psychopedagogy": "Special psychopedagogy",
-      "neuropsychomotor_recovery": "Neuropsychomotor recovery",
+      "emergency_situations": "Situații de urgență",
+      "pediatric_psychiatry": "Psihiatrie pediatrică",
+      "psychological_evaluation": "Evaluare psihologică",
+      "psychological_counseling": "Consiliere psihologică",
+      "support_groups": "Grupuri de suport",
+      "social_assistance_and_counseling": "Asistență și consiliere socială",
+      "personal_development": "Dezvoltare personală",
+      "vocational_counseling_and_career_guidance": "Consiliere vocațională și orientare în carieră",
+      "occupational_therapy_ergotherapy": "Terapie ocupațională/Ergoterapie",
+      "physiotherapy_physical_recovery": "Fizioterapie/Recuperare fizică",
+      "autism_spectrum_disorder_therapies": "Terapia tulburărilor din spectrul autist",
+      "disability_assessment": "Evaluarea dizabilității",
+      "pediatric_neurology": "Neurologie pediatrică",
+      "special_psychopedagogy": "Psihopedagogie specială",
+      "neuropsychomotor_recovery": "Recuperare neuropsihomotorie",
 
       "in_person_interaction": "În persoană",
       "online_interaction": "Online",
@@ -889,14 +892,18 @@
       "continue": "Continuați",
       "view": "Vizualizați rezultatele",
       "view_detailed_results": "Vizualizați rezultatele detaliate",
-      "started_at": "Început la {{date}}"
+      "started_at": "Început la {{date}}",
+      "psychological": "Psihologic",
+      "biological": "Biologic",
+      "social": "Social",
+      "latest_results": "Ultimele rezultate"
     },
     "baseline-assesment-result": {
-      "assessment_completed": "Assessment completed",
-      "loading_results": "Loading your results...",
-      "recommended_articles": "Recommended articles",
-      "recommended_videos": "Recommended videos",
-      "recommended_podcasts": "Recommended podcasts",
+      "assessment_completed": "Evaluare finalizată",
+      "loading_results": "Se încarcă rezultatele...",
+      "recommended_articles": "Articole recomandate",
+      "recommended_videos": "Videoclipuri recomandate",
+      "recommended_podcasts": "Podcasturi recomandate",
       "read_more_button": "Citește mai mult",
       "by": "de {{creator}}",
       "min_read": "min de citit",
