--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -847,7 +847,8 @@
       "finish_assessment": "Zakończ ocenę",
       "assessment_completed": "Ocena zakończona",
       "assessment_completed_description": "Dziękujemy za wypełnienie oceny. Twoje odpowiedzi zostały zapisane i zostaną wykorzystane, aby Ci pomóc.",
-      "assessment_completed_button": "Powrót do strony głównej"
+      "assessment_completed_button": "Powrót do strony głównej",
+      "save_button_label": "Save for later"
     },
     "baseline-assessment-dashboard": {
       "heading": "Twoja podstawowa ocena",
