--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -847,7 +847,8 @@
       "finish_assessment": "Завершить оценку",
       "assessment_completed": "Оценка завершена",
       "assessment_completed_description": "Спасибо за прохождение оценки. Ваши ответы сохранены и будут использованы, чтобы помочь вам.",
-      "assessment_completed_button": "Вернуться на главную"
+      "assessment_completed_button": "Вернуться на главную",
+      "save_button_label": "Save for later"
     },
     "baseline-assessment-dashboard": {
       "heading": "Ваша базовая оценка",
