--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -868,7 +868,12 @@
       "assessment_completed": "Evaluare finalizată",
       "assessment_completed_description": "Vă mulțumim pentru completare. Răspunsurile au fost salvate și vor fi folosite pentru a vă ajuta.",
       "assessment_completed_button": "Înapoi la Acasă",
-      "save_button_label": "Save for later"
+      "save_button_label": "Salvați pentru mai târziu",
+      "sontrgly_disagree": "Total dezacord",
+      "disagree": "Dezacord",
+      "neutral": "Neutru",
+      "agree": "Acord",
+      "strongly_agree": "Acord total"
     },
     "baseline-assessment-dashboard": {
       "heading": "Evaluarea dvs. inițială",
