--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -849,7 +849,12 @@
       "assessment_completed": "Оцінювання завершено",
       "assessment_completed_description": "Дякуємо за проходження оцінювання. Ваші відповіді збережено та буде використано, щоб допомогти вам.",
       "assessment_completed_button": "Повернутися на головну",
-      "save_button_label": "Save for later"
+      "save_button_label": "Зберегти на потім",
+      "sontrgly_disagree": "Повністю не згоден/не згодна",
+      "disagree": "Не згоден/не згодна",
+      "neutral": "Нейтрально",
+      "agree": "Згоден/згодна",
+      "strongly_agree": "Повністю згоден/згодна"
     },
     "baseline-assessment-dashboard": {
       "heading": "Ваша базова оцінка",
