Update src/locales/ru.json (POEditor.com)

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,7 +14,7 @@
       "footer_7": "Настройки файлов cookie",
       "footer_8": "Часто задаваемые вопросы",
       "emergency_button": "Экстренная помощь",
-      "button_text": "Перейти к приложению",
+      "button_text": "Зарегистрироваться",
       "contact_us": "Свяжитесь с нами",
       "your_profile_text": "Ваш профиль",
       "password_placeholder": "Пароль",
@@ -445,12 +445,12 @@
       "join_button_label_tooltip": "Вы можете присоединиться к консультации за 5 минут до начала"
     },
     "mood-tracker": {
-      "happy": "Счастливый",
-      "good": "Хороший",
-      "sad": "Грустный",
-      "depressed": "В депрессии",
-      "worried": "Взволнованный",
-      "heading": "Как самочувствие сегодня?",
+      "happy": "Отлично",
+      "good": "Хорошо",
+      "sad": "Грустно",
+      "depressed": "Депрессивно",
+      "worried": "Тревожно",
+      "heading": "Как Вы себя чувствуете сегодня?",
       "mood_tracker": "Трекер настроения",
       "additional_comment_placeholder": "Что заставило Вас так себя чувствовать?",
       "submit_mood_track": "Отправить",
@@ -511,10 +511,10 @@
     "mood-tracker-history": {
       "heading": "В целом вы чувствовали {{feeling}}  в течение последних 30 дней",
       "perfect": "Отлично",
-      "happy": "Счастливо",
+      "happy": "Отлично",
       "sad": "Грустно",
-      "depressed": "В депрессии",
-      "worried": "Взволнованно",
+      "depressed": "Депрессивно",
+      "worried": "Тревожно",
       "last_thirty_days_text": "За последние 30 дней Вы сообщили, что чувствовали:",
       "time": "раз",
       "times": "раз/раза"
@@ -603,11 +603,11 @@
       "try_again_button_label": "Пробовать снова"
     },
     "mood-track-history": {
-      "happy": "Счастливо",
-      "good": "Good",
+      "happy": "Отлично",
+      "good": "Хорошо",
       "sad": "Грустно",
-      "depressed": "В депрессии",
-      "worried": "Взволнованно",
+      "depressed": "Депрессивно",
+      "worried": "Тревожно",
       "you_felt": "You felt",
       "comment_text": "and you commented:",
       "no_result": "No results found.",
