Fix: Corrected wording in fear_frequency field across multiple locale files

--- a/src/blocks/BaselineAssesment/locales/en.json
+++ b/src/blocks/BaselineAssesment/locales/en.json
@@ -2,7 +2,7 @@
   "instructions": "Instructions: Thinking about the last two weeks, please choose the option that you think fits you best for the following statements.",
   "stress_level": "I am very stressed.",
   "sadness_anxiety": "I often feel sad or anxious.",
-  "fear_frequency": "I feel afraid(s) often.",
+  "fear_frequency": "I feel afraid often.",
   "emotion_control": "I find it very difficult to control my emotions.",
   "worry_anxiety": "I often worry and feel anxious.",
   "nervousness": "I often get nervous.",
