--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -1459,5 +1459,9 @@
       "text": "Դուք որոշ ժամանակ ակտիվ չէիք։ Ձեր անվտանգության համար մենք ավտոմատ կերպով ձեզ դուրս կբերենք համակարգից {{seconds}} վայրկյանից։",
       "cta": "Ես դեռ այստեղ եմ"
     }
+  },
+  "meta": {
+    "title": "uSupport Հաճախորդ",
+    "description": "Ձեր հոգեկան առողջությունը առաջնահերթ դարձնելու համար ստեղծված առաջին հարթակը։ uSupport‑ը ձեզ տրամադրում է անհատականացված, գաղտնի և արագ հոգեբանական աջակցություն՝ ձեր ընդհանուր բարեկեցության համար։"
   }
 }
