--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -1459,5 +1459,9 @@
       "text": "Сіз біраз уақыт белсенді болмадыңыз. Қауіпсіздігіңіз үшін {{seconds}} секундтан кейін жүйеден автоматты түрде шығарамыз.",
       "cta": "Мен әлі осындамын"
     }
+  },
+  "meta": {
+    "title": "uSupport Клиент",
+    "description": "Психикалық денсаулығыңызды басты орынға қою үшін жасалған алғашқы платформа. uSupport сіздің жалпы әл-ауқатыңыз үшін жекелендірілген, құпия және жедел психологиялық көмекті ұсынады."
   }
 }
