--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1464,5 +1464,9 @@
       "text": "Ти був/ла неактивний/а деякий час. Задля твоєї безпеки ми автоматично вийдемо з системи через {{seconds}} секунд.",
       "cta": "Я все ще тут."
     }
+  },
+  "meta": {
+    "title": "uSupport Клієнт",
+    "description": "Перша платформа, створена для того, щоб зробити ваше психічне здоров'я пріоритетом. uSupport надає персоналізовану, конфіденційну та швидку психологічну допомогу для вашого загального добробуту."
   }
 }
