--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1459,5 +1459,9 @@
       "text": "Вы были неактивны какое-то время. Для Вашей безопасности мы автоматически выполним выход через {{seconds}} секунд.",
       "cta": "Я все еще здесь"
     }
+  },
+  "meta": {
+    "title": "uSupport Клиент",
+    "description": "Первая платформа, созданная для того, чтобы сделать ваше психическое здоровье приоритетом. uSupport обеспечивает персонализированную, конфиденциальную и быструю психологическую поддержку для вашего общего благополучия."
   }
 }
