Fix: update heading text for email registration in English locale

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1033,7 +1033,7 @@
       "cookie_preferences": "Cookie preferences"
     },
     "register-email-page": {
-      "heading": "Register with email in uSupport"
+      "heading": "Register with email on uSupport"
     },
     "privacy-policy-page": {
       "heading": "Privacy Policy"
