Add: summary heading in multiple languages and style adjustments for BaselineAssessmentResult

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -910,7 +910,8 @@
       "dec_same_dec": "Великий прогрес! Психологічний та соціальний зменшилися, тоді як біологічний залишився без змін.",
       "dec_dec_inc": "Великий прогрес! Психологічний та біологічний зменшилися, хоча соціальний зріс.",
       "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
-      "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися."
+      "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися.",
+      "summary_heading": "Рекомендації, сформовані на основі отриманого балу"
     }
   },
   "pages": {
