--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -456,7 +456,7 @@
       "submit_mood_track": "Submit",
       "add_mood_tracker_success": "Your daily mood was added successfully",
       "emergency_label": "Does this relate to a life event or critical situation?",
-      "how_it_works": "See how it works",
+      "how_it_works": "How it works",
       "recommendations": "Recommendations",
       "recommendations_text": "Do you want to check out your mood graph and see recommended content?",
       "check_out": "Check out"
