--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -911,7 +911,8 @@
       "dec_dec_inc": "Great progress! Psychological and biological decreased, though social increased.",
       "dec_dec_same": "Great progress! Psychological and biological decreased, while social stayed the same.",
       "dec_dec_dec": "Excellent progress! Psychological, biological, and social all decreased.",
-      "summary_heading": "Recommendations generated based on the score obtained"
+      "summary_heading": "Recommendations generated based on the score obtained",
+      "organizations": "Recommended organizations"
     }
   },
   "pages": {
