--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -911,7 +911,8 @@
       "dec_dec_inc": "Великий прогрес! Психологічний та біологічний зменшилися, хоча соціальний зріс.",
       "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
       "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися.",
-      "summary_heading": "Рекомендації, сформовані на основі отриманого балу"
+      "summary_heading": "Рекомендації, сформовані на основі отриманого балу",
+      "organizations": "Рекомендовані організації"
     }
   },
   "pages": {
