--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -850,7 +850,7 @@
       "assessment_completed": "Оценка завершена",
       "assessment_completed_description": "Спасибо за прохождение оценки. Ваши ответы сохранены и будут использованы, чтобы помочь вам.",
       "assessment_completed_button": "Вернуться на главную",
-      "save_button_label": "Save for later"
+      "save_button_label": "Сохранить для позже"
     },
     "baseline-assessment-dashboard": {
       "heading": "Ваша базовая оценка",
@@ -862,10 +862,12 @@
       "view": "Посмотреть результаты",
       "view_detailed_results": "Посмотреть подробные результаты",
       "started_at": "Начато {{date}}",
-      "psychological": "Psychological",
-      "biological": "Biological",
-      "social": "Social",
-      "latest_results": "Latest Results"
+      "psychological": "Психологические",
+      "biological": "Биологические",
+      "social": "Социальные",
+      "latest_results": "Последние результаты",
+      "how_it_works": "Как это работает",
+      "see_last_result": "Базовая оценка результатов"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Оценка завершена",
