--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -871,7 +871,8 @@
       "biological": "Біологічний",
       "social": "Соціальний",
       "latest_results": "Останні Результати",
-      "how_it_works": "Як це працює"
+      "how_it_works": "Як це працює",
+      "see_last_result": "Базова оцінка результатів"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Оцінювання завершено",
