--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -491,7 +491,7 @@
       "november": "November",
       "december": "December",
       "coupon": "Coupon",
-      "explore_button_label": "Explore",
+      "explore_button_label": "Explore map",
       "join_button_label_tooltip": "You can join the consultation 5 minutes before the start time"
     },
     "activity-log-dashboard": {
